--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1441.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -33,7 +34,9 @@
     "pg": "^8.11.3",
     "prisma": "^5.2.0",
     "redis": "^4.6.7",
-    "socket.io": "^4.7.2"
+    "sharp": "^0.34.5",
+    "socket.io": "^4.7.2",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.6.2",
